<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>abreuapps.core</groupId>
	<artifactId>erp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>erp</name>
	<description>Sistema ERP - El Mago</description>
	<properties>
		<java.version>21</java.version>
		<guava.version>33.2.0-jre</guava.version>
	</properties>
        
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-data-jdbc</artifactId>
                </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
                <dependency>
                    <groupId>org.thymeleaf.extras</groupId>
                    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
                </dependency>
                <dependency>
                    <groupId>gg.jte</groupId>
                    <artifactId>jte-spring-boot-starter-3</artifactId>
                    <version>3.1.15</version>
                </dependency>
                <dependency>
                    <groupId>gg.jte</groupId>
                    <artifactId>jte</artifactId>
                    <version>3.1.15</version>
                </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-cache</artifactId>
                </dependency>
                <dependency>
                    <groupId>com.github.ben-manes.caffeine</groupId>
                    <artifactId>caffeine</artifactId> 
                </dependency>
		
		<dependency>
			<groupId>org.postgresql</groupId>
                        <artifactId>postgresql</artifactId>
		</dependency>
                
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
                
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-security</artifactId>
                </dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
                
                <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>jakarta.persistence</artifactId>
                 <version>2.2.3</version>
                </dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
                
                <dependency>
                    <groupId>com.maxmind.geoip2</groupId>
                    <artifactId>geoip2</artifactId>
                    <version>2.15.0</version>
                </dependency>
                
                <dependency>
                   <groupId>net.sf.jasperreports</groupId>
                   <artifactId>jasperreports</artifactId>
                   <version>6.21.2</version>
                </dependency>
         
	</dependencies>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <mainClass>com.dom.stp.omsa.ProjectApplication</mainClass>
                        <layout>JAR</layout>
                    </configuration>
                </plugin>
            </plugins>
            <resources>
                <resource>
                    <directory>src/main/resources/</directory>
                </resource>
            </resources>
        </build>
</project>
